objects/History__c.object
<CustomObject>
    <fields>
        <fullName>History_Type__c</fullName>
        <label>History Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trip_Id__c</fullName>
        <label>Trip Id</label>
        <referenceTo>TRIP__c</referenceTo>
        <relationshipLabel>Historical</relationshipLabel>
        <relationshipName>Historical</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historical</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>